# cuda-mlp

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  compare_mlp.ipynb  cos_2pi.cu  polynom.cu  results_saver.h  x_sin_2pi.cu
demo/test_results/: cos_2pi_test_labels.csv  polynom_test_labels.csv  x_sin_2pi_test_features.csv  x_sin_2pi_test_labels.csv
include/perceptron/: Layer.h  MultilayerPerceptron.h
include/perceptron/activations/: IActivation.h  IdentityActivation.h  LeakyReLUActivation.h  ReLUActivation.h  SigmoidActivation.h  SoftMaxActivation.h
include/perceptron/common/: Common.h
include/perceptron/common/functions/: MathFunctions.cuh
include/perceptron/common/utils/: CuBLASUtils.h  CuDNNUtils.h  CudaUtils.h  CurandUtils.h  MemoryUtils.h  StreamUtils.h
include/perceptron/losses/: ILoss.h  LogLossWithSoftMax.h  SquaredLoss.h
include/perceptron/optimizers/: IOptimizer.h  OptimizerFactory.h  SGD.h
include/perceptron/tensors/: Tensor1D.h  Tensor1DImpl.hpp  Tensor2D.h  Tensor2DImpl.hpp  TensorGetter.h  TensorHelper.h
include/perceptron/tensors/ops/: ConstructOps.h  MathOps.h  MemoryOps.h  Ops.h
include/perceptron/tensors/ops/kernels/: ConstructOpsKernels.cuh  MathOpsKernels.cuh  MemoryOpsKernels.cuh
include/perceptron/tensors/ops/kernels/impl/: ConstructOpsKernelsImpl.cuh  MathOpsKernelsImpl.cuh  MemoryOpsKernelsImpl.cuh
include/perceptron/tensors/shufflers/: BatchShuffler.h  DummyShuffler.h  IShuffler.h
src/: CMakeLists.txt  module.cu
src/perceptron/: Layer.cu  MultilayerPerceptron.cu
src/perceptron/activations/: IActivation.cu  IdentityActivation.cpp  IdentityActivation.cu  LeakyReLUActivation.cu  ReLUActivation.cu  SigmoidActivation.cpp  SigmoidActivation.cu  SoftMaxActivation.cu
src/perceptron/common/utils/: CuBLASUtils.cpp  CuBLASUtils.cu  CuDNNUtils.cpp  CudaUtils.cpp  CurandUtils.cu  MemoryUtils.cpp  MemoryUtils.cu  StreamUtils.cu
src/perceptron/losses/: ILoss.cpp  ILoss.cu  LogLossWithSoftMax.cu  SquaredLoss.cpp  SquaredLoss.cu
src/perceptron/optimizers/: IOptimizer.cu  OptimizerFactory.cu  SGD.cpp  SGD.cu
src/perceptron/tensors/ops/: BLASOps.cpp
src/perceptron/tensors/ops/kernels/: ConstructOpsKernels.cu  MathOpsKernels.cu  MemoryOpsKernels.cu
src/perceptron/tensors/shufflers/: BatchShuffler.cu  DummyShuffler.cu  IShuffler.cu
tests/: CMakeLists.txt
tests/perceptron/: MathOps_tests.cu  MemoryOps_tests.cu  MultilayerPerceptron_tests.cu
